--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ djangorestframework>=3.11.0,<3.12.0
 psycopg2>=2.8.5,<2.9.0
 pillow>=7.2.0,<7.3.0
 flake8>=3.8.1,<3.9.0
-
+gunicorn
+django-heroku
+dj-database-url
